--- a/client/src/css/profile.scss
+++ b/client/src/css/profile.scss
@@ -163,4 +163,9 @@ h1 {
 
 	align-items: center;
 	justify-content: center;
+
+	position: absolute;
+	left: 50px;
+	right: 50px;
+	z-index: -1;
 }
